--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>1v1 Video Chat</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="data:," /> <!-- Prevent 404 favicon error -->
+  <style>
+    /* Optional inline fallback style */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #fff;
+      text-align: center;
+    }
+    h1 {
+      margin-top: 20px;
+    }
+    #videos {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      margin-top: 30px;
+      flex-wrap: wrap;
+    }
+    video {
+      width: 45%;
+      max-width: 480px;
+      background: black;
+      border-radius: 10px;
+    }
+    @media (max-width: 768px) {
+      video {
+        width: 90%;
+      }
+    }
+  </style>
 </head>
 <body>
   <h1>1v1 Video Chat</h1>
   <div id="videos">
-    <video id="localVideo" autoplay muted></video>
-    <video id="remoteVideo" autoplay></video>
+    <video id="localVideo" autoplay muted playsinline></video>
+    <video id="remoteVideo" autoplay playsinline></video>
   </div>
+
+  <!-- Socket.IO and client logic -->
   <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
 </body>
